* 'make splint' target checks 0refresh.c with splint. Added a couple of checks   for unlikely error conditions.
Also compile with non-writeable strings (no errors found).

--- a/zero-inst/Makefile.am
+++ b/zero-inst/Makefile.am
@@ -54,4 +54,7 @@ uninstall-real:
 	 sed "s/\@helper_user\@/${HELPER_USER}/" >0install
 	chmod a+x 0install
 
-CFLAGS = -O2 -Wall -Wstrict-prototypes -g -Wmissing-prototypes
+splint:
+	splint 0refresh.c +unixlib -predboolint -boolops +boolint +matchanyintegral `pkg-config --cflags dbus-1` -I.
+
+CFLAGS = -O2 -Wall -Wstrict-prototypes -g -Wmissing-prototypes -Wwrite-strings
