Added annotations to allow checking zero-install.c and mirrors.c.

--- a/zero-inst/Makefile.am
+++ b/zero-inst/Makefile.am
@@ -59,5 +59,6 @@ SPLINT_FLAGS = +unixlib -predboolint -boolops +boolint +matchanyintegral -I.
 splint:
 	splint ${SPLINT_FLAGS} 0refresh.c `pkg-config --cflags dbus-1`
 	splint ${SPLINT_FLAGS} 0run.c
+	splint ${SPLINT_FLAGS} zero-install.c mirrors.c `pkg-config --cflags dbus-1`
 
 CFLAGS = -O2 -Wall -Wstrict-prototypes -g -Wmissing-prototypes -Wwrite-strings
