Split case study into a separate file, and improved menu system.

--- a/htdocs/Makefile
+++ b/htdocs/Makefile
@@ -1,7 +1,7 @@
-HTML = index.html compare.html faq.html install.html technical.html support.html docs.html security.html packagers.html
+HTML = index.html compare.html faq.html install.html technical.html support.html docs.html security.html packagers.html packagers-cs-1.html
 
 all: ${HTML}
 
-%.html: %.xml to_html.xsl
+%.html: %.xml to_html.xsl structure.xml
 	xsltproc -o $@ --stringparam file "$@" to_html.xsl "$<"
 	xmllint --noout --valid $@
