--- a/htdocs/Makefile
+++ b/htdocs/Makefile
@@ -1,4 +1,4 @@
-HTML = index.html compare.html faq.html install.html technical.html support.html docs.html security.html packagers.html packagers-cs-1.html packagers-cs-2.html injector.html
+HTML = index.html compare.html faq.html install.html technical.html support.html docs.html security.html packagers.html packagers-cs-1.html packagers-cs-2.html injector.html injector-packagers.html injector-design.html
 
 all: ${HTML}
 
